Added nltk path

--- a/project.ipynb
+++ b/project.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,6 +31,7 @@
     "import math\n",
     "import re\n",
     "import nltk\n",
+    "nltk.data.path.append('./nltk_data')\n",
     "from nltk.corpus import words\n",
     "from collections import Counter\n",
     "from functools import lru_cache\n",
