--- a/project.ipynb
+++ b/project.ipynb
@@ -30,7 +30,9 @@
     "import numpy as np\n",
     "import math\n",
     "import re\n",
+    "import os\n"
     "import nltk\n",
+    "nltk.data.path.append(os.path.join(os.getcwd(), 'nltk_data'))\n"
     "nltk.data.path.append('./nltk_data')\n",
     "from nltk.corpus import words\n",
     "from collections import Counter\n",
